# file-share

./: .gitignore  Cargo.toml  README.md  frontend.py  marimo_build.sh  package-lock.json  package.json  pyproject.toml  test.py  wrangler.toml
nopython/: index.html
src/: lib.rs
