[package]
name = "file-share"
version = "0.1.0"
edition = "2021"
authors = ["i-am-unknown-81514525 <74453352+i-am-unknown-81514525@users.noreply.github.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6" }
worker-macros = { version = "0.6" }
console_error_panic_hook = { version = "0.1.7" }
wasm-bindgen = "0.2.100"
