[project]
name = "file-share"
version = "0.1.0"
description = "A Cloudflare Worker who allow file sharing with a code, and a frontend made with python marimo."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
]

[dependency-groups]
frontend = ["marimo>=0.14.16"]
test = ["requests>=2.32.4", "websockets>=15.0.1"]
